primitives/api/test/tests/ui/mock_only_one_error_type.stderr
error: Error type can not change between runtime apis
  --> $DIR/mock_only_one_error_type.rs:23:3
   |
23 |         type Error = u64;
   |         ^^^^

error[E0277]: the trait bound `u32: std::convert::From<std::string::String>` is not satisfied
  --> $DIR/mock_only_one_error_type.rs:15:1
   |
15 | / sp_api::mock_impl_runtime_apis! {
16 | |     impl Api<Block> for MockApi {
17 | |         type Error = u32;
18 | |
...  |
26 | |     }
27 | | }
   | |_^ the trait `std::convert::From<std::string::String>` is not implemented for `u32`
   |
   = help: the following implementations were found:
             <u32 as std::convert::From<bool>>
             <u32 as std::convert::From<char>>
             <u32 as std::convert::From<h2::frame::reason::Reason>>
             <u32 as std::convert::From<h2::frame::reason::Reason>>
           and 18 others
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
